@@ -7,18 +7,21 @@
 #include "Game.hpp"
 #include "GameUi.hpp"
 
-// This class is a singleton
+/**
+ * @brief Controller of the MVC pattern
+ *
+ * This class os a singleton, and dispatch the messages between the games and
+ *the interfaces.
+ * It maintain a pairs list to allow them to communicate
+ */
 class Controller : public QObject
 {
     Q_OBJECT
 
   public:
-    Controller();
     ~Controller();
-    static Controller* get(); // Classic instance getter
-
-    // Slots connected from the main window
-public slots:
+    static Controller* get();
+    static Controller* realInstance();
     void newGame();
     void openGame();
     void saveGame();
@@ -27,8 +30,18 @@ public slots:
     void closeCurrentGame();
 
   private:
-    Q_DISABLE_COPY(Controller);
+    Q_DISABLE_COPY(Controller)
+    Controller();
+
+    /**
+     * @brief This list keeps the association between a game and its interface
+     *
+     */
     QList<QPair<Game*, GameUi*>> GameList;
+    /**
+     * @brief Point to the active pair in the main window
+     *
+     */
     QPair<Game*, GameUi*>* CurrentGame;
 };
 
