@@ -2,6 +2,8 @@
 #include "Controller.hpp"
 #include <QMenuBar>
 
+static MainWindow* mainwindow;
+
 MainWindow::MainWindow()
 {
     /***********************************************************
@@ -9,39 +11,40 @@ MainWindow::MainWindow()
      *          ACTIONS
      *
      ***********************************************************/
+
     // New game
     ActionNewGame = new QAction(this);
     ActionNewGame->setIcon(QIcon::fromTheme("document-new"));
     ActionNewGame->setShortcut(QKeySequence::New);
-    connect(ActionNewGame, SIGNAL("triggered"), Controller::get(), SLOT("newGame"));
+    connect(ActionNewGame, &QAction::triggered, Controller::get(), &Controller::newGame);
 
     // Open game
     ActionOpenGame = new QAction(this);
     ActionOpenGame->setIcon(QIcon::fromTheme("document-open"));
     ActionOpenGame->setShortcut(QKeySequence::Open);
-    //connect(ActionOpenGame, &QAction::triggered, Controller::get(), &Controller::openGame);
+    connect(ActionOpenGame, &QAction::triggered, Controller::get(), &Controller::openGame);
 
     // Save game
     ActionSaveGame = new QAction(this);
     ActionSaveGame->setIcon(QIcon::fromTheme("document-save"));
     ActionSaveGame->setShortcut(QKeySequence::Save);
-//    connect(ActionSaveGame, &QAction::triggered, Controller::get(), &Controller::saveGame);
+    connect(ActionSaveGame, &QAction::triggered, Controller::get(), &Controller::saveGame);
 
     // Save game as
     ActionSaveAsGame = new QAction(this);
     ActionSaveAsGame->setIcon(QIcon::fromTheme("document-save-as"));
     ActionSaveAsGame->setShortcut(QKeySequence::SaveAs);
-//    connect(ActionSaveAsGame, &QAction::triggered, Controller::get(), &Controller::saveGameAs);
+    connect(ActionSaveAsGame, &QAction::triggered, Controller::get(), &Controller::saveGameAs);
 
     // Save all games
     ActionSaveAllGames = new QAction(this);
     ActionSaveAllGames->setShortcut(QKeySequence(Qt::ALT + Qt::SHIFT + Qt::Key_L));
-//   connect(ActionSaveAllGames, &QAction::triggered, Controller::get(), &Controller::saveAllGames);
+    connect(ActionSaveAllGames, &QAction::triggered, Controller::get(), &Controller::saveAllGames);
 
     // Close current game
     ActionCloseCurrentGame = new QAction(this);
     ActionCloseCurrentGame->setShortcut(QKeySequence::Close);
-//    connect(ActionCloseCurrentGame, &QAction::triggered, Controller::get(), &Controller::closeCurrentGame);
+    connect(ActionCloseCurrentGame, &QAction::triggered, Controller::get(), &Controller::closeCurrentGame);
 
     // Quit
     ActionQuitApplication = new QAction(this);
@@ -70,6 +73,12 @@ MainWindow::MainWindow()
     // Populate menu
     menuBar()->addMenu(MenuGame);
 
+    /***********************************************************
+     *
+     *          MISC
+     *
+     ***********************************************************/
+
     // Translate interface
     translate();
 }
@@ -78,6 +87,38 @@ MainWindow::~MainWindow()
 {
 }
 
+/**
+ * @brief Singleton getter
+ *
+ * @return A pointer to the singleton
+ */
+MainWindow* MainWindow::get()
+{
+    if (mainwindow == nullptr) {
+        mainwindow = new MainWindow;
+    }
+    return mainwindow;
+}
+
+/**
+ * @brief Return the instance of the singleton
+ *
+ * This method returns a pointer which can be used by delete.
+ * It won't create an instance if the singleton doesn't exist, but delete
+ *supports nullptr
+ *
+ * @return MainWindow* Pointer to the singleton if it exists, else nullptr
+ */
+MainWindow* MainWindow::realInstance()
+{
+    return mainwindow;
+}
+
+/**
+ * @brief Set all the strings of the main window
+ *
+ * @return void
+ */
 void MainWindow::translate()
 {
     // Menus
@@ -92,4 +133,3 @@ void MainWindow::translate()
     ActionCloseCurrentGame->setText(tr("Close current"));
     ActionQuitApplication->setText(tr("Quit"));
 }
-
